Alignment fix

--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -333,7 +333,7 @@ nav
   #contact
     .right-section
       #contact-container
-        margin-left: 22vh
+        // margin-left: 22vh
 
 @media (max-width: 1200px)
   #gallery
